--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -2,5 +2,6 @@
 
 <h1>Contact</h1>
 <p>
-	If you have any questions about the site, please pass them on to test@example.com!
+	Contact Ruby on Rails Tutorial about the sample app at the
+	<a href="http://railstutorial.org/contact">contact page.</a>
 </p>	
